--- a/_includes/snippets_library/EPCC_Cirrus_pbs/_config_options.yml
+++ b/_includes/snippets_library/EPCC_Cirrus_pbs/_config_options.yml
@@ -32,7 +32,7 @@ remote:
   homedir: "/home/tc036/tc036"
   user: "yourUsername"
   prompt: "[yourUsername@cirrus-login1 ~]$"
-  bash_shebang: "#!/usr/bin/env bash"
+  bash_shebang: "#!/bin/bash"
 
 sched:
   name: "PBS Pro"
